src/objects/Airport_Detail__c.object
<CustomObject>
    <description>Represents Airport related data and must be related to an Account where data for the airport as a legal entity is stored.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account representing the Airport as a legal entity.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Airport Details</relationshipLabel>
        <relationshipName>Airport_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Airport_Name__c</fullName>
        <description>The name of the airport is equal to the name of the associated account.</description>
        <formula>Account__r.Name</formula>
        <label>Airport Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Coordinates__c</fullName>
        <label>Coordinates</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtKey__c</fullName>
        <description>use to uniquely identify a record and to prevent duplicates</description>
        <externalId>true</externalId>
        <label>ExtKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Airports</relationshipLabel>
        <relationshipName>Airports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICAO_Code__c</fullName>
        <description>If assigned, the code assigned to the airport by the International Civil Aviation Organisation (ICAO).</description>
        <externalId>true</externalId>
        <label>ICAO Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Airport Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Airport_Name__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Airport_Name__c</field>
            <operation>contains</operation>
            <value>bas</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APD-{0000000000}</displayFormat>
        <label>Airport Autoname</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airport Details</pluralLabel>
    <recordTypes>
        <fullName>Airport</fullName>
        <active>true</active>
        <description>Airports&apos; location information.</description>
        <label>Airport</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>